<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">

    <Button
        android:id="@+id/ccbtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basicButton"/>

    <ImageButton
        android:id="@+id/ccbtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imageButton"/>
    <ToggleButton
        android:id="@+id/ccbtn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle_button"
        android:textOff="Start"
        android:textOn="Stop"/>
</LinearLayout>