<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <CheckBox
        android:id="@+id/chickenCB"
        android:checked="true"
        android:text="@string/chicken_CB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/fishCB"
        android:text="@string/fish_CB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/steakCB"
        android:text="@string/steak_CB"
        android:checked="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="doClick"/>
</LinearLayout>