<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/userNameLbl"
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/userNameText"
        android:layout_toRightOf="@+id/userNameLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/pwdLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameText"
        android:text="@string/pass"/>

    <EditText
        android:id="@+id/pwdText"
        android:layout_toRightOf="@+id/pwdLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userNameText"/>

    <TextView
        android:id="@+id/pwdCriteria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pwdText"
        android:text="@string/pass_crit"/>

    <TextView
        android:id="@+id/disclaimerLbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/at"/>
</RelativeLayout>